Login page,Signup page,Profile page,Header and Footer added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <ion-app>
   <ion-split-pane when="(min-width: 2000px)" contentId="main-content">
     <ion-menu contentId="main-content" type="overlay" >
@@ -17,3 +18,4 @@
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
+<app-footer></app-footer>
