--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button type="button"></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Home Page</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <img src="https://image.freepik.com/free-vector/online-shopping-concept-digital-marketing-website-mobile-application_43880-332.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%;">
+  <img src="assets\shopping.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 65%;">
   <!-- <ion-content class="text-center"> -->
   <h2 class="text-center">Our Best Sellers</h2>
   <p class="text-center"><i> ipsum dolor sit amet consectetur adipisicing elit. Saepe, dicta. Nostrum voluptatem ratione corporis modi! Nostrum sequi a consequatur delectus, cum quibusdam adipisci aut quia! Beatae iste excepturi vero numquam.</i></p>
