--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,52 @@
-<p>
-  footer works!
-</p>
+<div class="container-fluid bg-danger fixed-bottom">
+  <div class="card-body">
+      <div class="row">
+          <div class="col-md-4">
+              <h2 class="card-title font-weight-bold"><b>Shopping Planet</b></h2>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="col-md-2 text-light">
+                  <a href="">
+                  <p class="text-body m-0">Home</p>
+                  </a>
+                  <a href="">
+                  <p class="text-body m-0"> Men </p>
+                  </a>
+                  <a href="" >
+                  <p class="text-body m-0"> Women </p>
+                  </a>
+                  <a href="">
+                  <p class="text-body m-0"> Watches </p>
+                  </a>
+                  <a href="">
+                      <p class="text-body m-0"> Jackets </p>
+                  </a>
+          </div>
+          <div class="col-md-2 text-light">
+              <a href="">
+                  <p class="text-body m-0">Search</p>
+              </a>
+              <a href="">
+                  <p class="text-body m-0">Privacy Policy</p>
+              </a>
+              <a href="">
+                  <p class="text-body m-0">Tearms & conditions</p>
+              </a>
+              <a href="">
+                  <p class="text-body m-0">Returns & Refunds</p>
+              </a>
+          </div>
+          <div class="col-lg-4">
+              <p class="text-uppercase font-weight-bold m-0">Newsletter</p>
+              <form class="form-inline my-1 my-lg-4 shadow">
+                  <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
+                  <button class="btn btn-primary my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
+                </form>  
+          </div>
+      </div>
+      <br>
+      <!-- <div class="row px-3">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor nisi maiores aliquam, adipisci modi quia. Voluptatibus est possimus ex repudiandae exercitationem impedit, rerum sint ad. Obcaecati consequuntur facilis dolor fugiat.</p>
+      </div> -->
+  </div>
+</div>
