--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,39 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-3">
+    <a class="navbar-brand font-weight-bold col-md-2 text-center text-danger" routerLink="/home">Shopping Planet</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/login">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/profile.html">Men</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/women">Women</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/jacket">Jackets</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/watch">Watches</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/login">Login </a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" routerLink="/profile">Profile</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" >
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        <!-- <mdb-icon fas icon="user-circle"></mdb-icon> -->
+      </form>
+    </div>
+  </nav>
+
+
