updated the header, added the order-history page, Cart page; fixed the issue related to the footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid bg-danger fixed-bottom">
+<div class="container-fluid bg-danger">
   <div class="card-body">
       <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-4">
               <h2 class="card-title font-weight-bold"><b>Shopping Planet</b></h2>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
           </div>
-          <div class="col-md-2 text-light">
+          <div class="col-sm-2 text-light">
                   <a href="">
                   <p class="text-body m-0">Home</p>
                   </a>
@@ -22,7 +22,7 @@
                       <p class="text-body m-0"> Jackets </p>
                   </a>
           </div>
-          <div class="col-md-2 text-light">
+          <div class="col-sm-2 text-light">
               <a href="">
                   <p class="text-body m-0">Search</p>
               </a>
@@ -38,15 +38,11 @@
           </div>
           <div class="col-lg-4">
               <p class="text-uppercase font-weight-bold m-0">Newsletter</p>
-              <form class="form-inline my-1 my-lg-4 shadow">
-                  <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
-                  <button class="btn btn-primary my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
+                <form class="form-inline my-1 my-lg-4 shadow">
+                    <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
+                    <button class="btn btn-primary my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
                 </form>  
           </div>
       </div>
-      <br>
-      <!-- <div class="row px-3">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor nisi maiores aliquam, adipisci modi quia. Voluptatibus est possimus ex repudiandae exercitationem impedit, rerum sint ad. Obcaecati consequuntur facilis dolor fugiat.</p>
-      </div> -->
   </div>
 </div>
