--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,13 @@
       </ion-card>
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col class="text-center">
+      <ion-button>
+        View All
+      </ion-button>
+    </ion-col>
+  </ion-row>
   <!-- <div class="row px-0">
       <div class="container">
         <div class="row">
@@ -149,4 +156,7 @@
         </a>
       </div>
     </div> -->
+    <div class="fixed">
+      <app-footer></app-footer>
+    </div>
 </ion-content>
