--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,6 @@
 <ion-content>
   <div class="row my-5">
     <div class="col-md-4">
-           
     </div>
     <div class="text-center p-4 col-md-4">
         <div class="card bgr" style="width: 25rem; height: 20rem;">
@@ -20,5 +19,8 @@
             </div>
         </div>
     </div>
-</div>
+  </div>
+  <div class="fixed">
+    <app-footer></app-footer>
+  </div>
 </ion-content>
