--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -22,5 +22,8 @@
             </div>
         </div>
     </div>
-</div>
+  </div>
+  <div class="fixed">
+    <app-footer></app-footer>
+  </div>
 </ion-content>
