--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -24,5 +24,8 @@
             </div>
         </div>
     </div>
-</div>
+  </div>
+  <div class="fixed">
+    <app-footer></app-footer>
+  </div>
 </ion-content>
