--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-<ion-app>
+<!-- <ion-app>
   <ion-split-pane when="(min-width: 2000px)" contentId="main-content">
     <ion-menu contentId="main-content" type="overlay" >
       <ion-content>
@@ -17,4 +16,7 @@
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
+</ion-app> -->
+<ion-app>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
