--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -1,8 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>cart</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
+
 
 <ion-content>
   <div class="row pl-5 pt-2">
