--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,9 @@
             <a class="dropdown-item" href="#">Others</a>
           </div>
         <li class="nav-item active">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item active">
             <a class="nav-link" routerLink="/profile">Profile</a>
         </li>
         <li class="nav-item active">
