--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <ion-content>
   <img src="assets\shopping.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 65%;">
   <!-- <ion-content class="text-center"> -->
