--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-3">
-    <a class="navbar-brand font-weight-bold col-md-2 text-center text-danger" routerLink="/home">Shopping Planet</a>
+      <img src="assets\icon\Logo.png" alt="Logo" style="height: 4%;width: 4%;">
+      <a class="navbar-brand font-weight-bold col-md-2 text-center text-danger size" routerLink="/home">Shopping Planet</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <ul class="nav-item active">
+          <a class="nav-link size1" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+        </ul>
+        <li class="nav-item dropdown size1">
+          <a class="nav-link dropdown-toggle active size1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             All Categories
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -21,12 +22,6 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/others">Others</a>
           </div>
-        <li>
-          <form class="form-inline my-2 my-lg-0" >
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-          <!-- <mdb-icon fas icon="user-circle"></mdb-icon> -->
-          </form>
         </li>
         <li class="nav-item active right">
           <a class="nav-link" routerLink="/login">Login</a>
@@ -38,9 +33,20 @@
           <a class="nav-link" routerLink="/cart">My Cart</a>
         </li>
         <!-- <li class="nav-item active">
+
           <a class="nav-link" routerLink="/order-history">My Order History</a>
         </li> -->
+
       </ul>
+      <div class="bg-dark">
+        <button><ion-icon name="search-outline"></ion-icon></button>
+      </div>
+      <!-- <form class="form-inline my-2 my-lg-0" >
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        <mdb-icon fas icon="user-circle"></mdb-icon>
+        </form> -->
+
     </div>
   </nav>
 
