Header Footer Color changed

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,9 +22,9 @@
   </ion-row>
   <ion-row>
     <ion-col class="text-center">
-      <ion-button>
+      <button class="btn" style="background-color: #f7ce3e;">
         View All
-      </ion-button>
+      </button>
     </ion-col>
   </ion-row>
   <!-- <div class="row px-0">
