--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-danger">
-  <div class="card-body">
+<div class="container-fluid text-dark" style="background-color: #f7ce3e;">
+  <div class="card-body">   
       <div class="row">
           <div class="col-sm-4">
               <h2 class="card-title font-weight-bold"><b>Shopping Planet</b></h2>
