--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-3">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top py-3" style="background-color: #000000;">
       <img src="assets\icon\Logo.png" alt="Logo" style="height: 4%;width: 4%;">
-      <a class="navbar-brand font-weight-bold col-md-2 text-center text-danger size" routerLink="/home">Shopping Planet</a>
+      <a class="navbar-brand font-weight-bold col-md-2 text-center size" style="color: #f7ce3e;" routerLink="/home">Shopping Planet</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,9 +38,8 @@
         </li> -->
 
       </ul>
-      <div class="bg-dark">
-        <button><ion-icon name="search-outline"></ion-icon></button>
-      </div>
+        <ion-icon name="search-outline"></ion-icon>
+
       <!-- <form class="form-inline my-2 my-lg-0" >
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
