Improved the header, login/Signup/profile/cart pages
added Icons to header, moved relevent things to dropdown

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -4,7 +4,7 @@
 <ion-content>
   <div class="row pl-5 pt-2">
     <h1>
-      Cart Details
+      <b>Cart Details</b>
     </h1>
   </div>
   <div class="row">
@@ -76,9 +76,9 @@
           </ion-card-subtitle>
           <ion-row>
             <ion-col class="text-center">
-              <form class="form-inline my-lg-4 shadow ml-5">
-                <input class="form-control bg-dark" style="width: 60%;" type="search" placeholder="Enter Coupon Code" aria-label="Search">
-                <button class="btn btn-danger my-2 my-sm-0 rounded-0" style="width: 25%;" type="submit">Apply</button>
+              <form class="form-inline my-lg-4 shadow mx-5">
+                <input class="form-control bg-light" style="width: 70%;" type="search" placeholder="Enter Coupon Code" aria-label="Search">
+                <button class="btn btn-warning my-2 my-sm-0" style="width: 30%;" type="submit">Apply</button>
               </form>
             </ion-col>
           </ion-row>
@@ -89,7 +89,7 @@
           </ion-row>
           <ion-row class="m-1">
             <ion-col class="col-sm-6">
-              Cart total:
+              Cart total: <b> Value</b> 
             </ion-col>
             <ion-col>
 
@@ -124,7 +124,7 @@
           <br>
           <ion-row>
             <ion-col class="text-center">
-              <button class="btn btn-danger my-2 my-sm-0 rounded-0" type="submit">Secure Checout Now</button>
+              <button class="btn btn-warning my-2 my-sm-0" type="submit">Secure Checout Now</button>
             </ion-col>
           </ion-row>
         </ion-card-content>
@@ -133,12 +133,13 @@
   </div>
   <div class="row">
     <ion-col class="text-center">
-      <button class="btn btn-danger">
+      <button class="btn btn-warning">
         Continue Shopping
       </button>
     </ion-col> 
   </div>  
   <br>
+
   <div class="fixed">
     <app-footer></app-footer>
   </div>
