--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,9 +38,9 @@
           </div>
           <div class="col-lg-4">
               <p class="text-uppercase font-weight-bold m-0">Newsletter</p>
-                <form class="form-inline my-1 my-lg-4 shadow">
+                <form class="form-inline my-1 my-lg-4 shadow-sm">
                     <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
-                    <button class="btn btn-primary my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
+                    <button class="btn btn-dark my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
                 </form>  
           </div>
       </div>
