--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,3 +6,37 @@ ion-icon{
 .size{
     font-size: 150%;
 }
+
+
+.dropbtn {
+    color: white;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #0e0e0e;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: rgb(70, 70, 70);}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+//   .dropdown:hover .dropbtn {background-color: #3e8e41;}
