--- a/src/app/order-history/order-history.page.html
+++ b/src/app/order-history/order-history.page.html
@@ -7,98 +7,11 @@
         Order History
       </h1>
     </div>
-    <div class="row">
+    <div class="row" *ngFor="let i of [0,1,2,3,4]">
         <ion-card>
           <ion-row>
-            <ion-col class="col-cm-2">
-              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" class="img-fluid" alt="product" >
-            </ion-col>
-            <ion-col class="col-sm-10">
-              <ion-row>    
-                <ion-col class="col-sm-8">
-                  <h4 class="card-title">Product Name</h4>
-                  <ion-card-subtitle>
-                    Color: Red
-                  </ion-card-subtitle>   
-                </ion-col>
-                <ion-col>
-                  <h5>Cost:</h5> 
-                  <ion-card-subtitle>
-                    (Including all taxes)
-                  </ion-card-subtitle>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <h4 >Quantity: </h4>
-              </ion-row>
-              <ion-row>
-                <h5>Ordered on: </h5>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-card>
-        <ion-card>
-          <ion-row>
-            <ion-col class="col-cm-2">
-              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" class="img-fluid" alt="product" >
-            </ion-col>
-            <ion-col class="col-sm-10">
-              <ion-row>    
-                <ion-col class="col-sm-8">
-                  <h4 class="card-title">Product Name</h4>
-                  <ion-card-subtitle>
-                    Color: Red
-                  </ion-card-subtitle>   
-                </ion-col>
-                <ion-col>
-                  <h5>Cost:</h5> 
-                  <ion-card-subtitle>
-                    (Including all taxes)
-                  </ion-card-subtitle>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <h4 >Quantity: </h4>
-              </ion-row>
-              <ion-row>
-                <h5>Ordered on: </h5>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-card>
-        <ion-card>
-          <ion-row>
-            <ion-col class="col-cm-2">
-              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" class="img-fluid" alt="product" >
-            </ion-col>
-            <ion-col class="col-sm-10">
-              <ion-row>    
-                <ion-col class="col-sm-8">
-                  <h4 class="card-title">Product Name</h4>
-                  <ion-card-subtitle>
-                    Color: Red
-                  </ion-card-subtitle>   
-                </ion-col>
-                <ion-col>
-                  <h5>Cost:</h5> 
-                  <ion-card-subtitle>
-                    (Including all taxes)
-                  </ion-card-subtitle>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <h4 >Quantity: </h4>
-              </ion-row>
-              <ion-row>
-                <h5>Ordered on: </h5>
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-card>
-        <ion-card>
-          <ion-row>
-            <ion-col class="col-cm-2">
-              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" class="img-fluid" alt="product" >
+            <ion-col class="col-sm-2 m-0 p-0">
+              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" style="" class="img-fluid" alt="product" >
             </ion-col>
             <ion-col class="col-sm-10">
               <ion-row>    
@@ -126,6 +39,9 @@
         </ion-card>
     </div>
   </ion-grid>
+  
+  <br>
+
   <div class="fixed">
     <app-footer></app-footer>
   </div>
