--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,24 +1,46 @@
 <app-header></app-header>
 
 <ion-content>
-  <div class="row my-5">
-    <div class="col-md-4">
-           
+  <div class="row my-3">
+    <div class="col-lg-4"> 
     </div>
-    <div class="text-center p-4 col-md-4">
-        <div class="card bgr" style="width: 25rem; height: 30rem;">
-            <div class="card-body">
-                <h5><b>Signup on Shopping Planet</b></h5>
-                <input class="tags w-75 my-4 py-1" type="text" placeholder="RobertHowdy22"><br>
-                <input class="tags w-75 mb-4 py-1" type="text" placeholder="Robert Daniel Howdyson" disabled><br>
-                <input class="tags w-75 mb-4 py-1" type="email" placeholder="rbhowdy@gmail.com" disabled><br>
-                <input class="tags w-75 mb-4 py-1" type="number" placeholder="+12 9383245633"><br>
-                <input class="tags w-75 mb-4 py-1" type="password" placeholder="............."><br>
-                <a href="/home"><button class="btn btn-danger w-75 mb-4 py-2 shadow-sm">Save Details</button></a>
-            </div>
+    <div class="text-center p-4 col-lg-4">
+      <div class="card mx-4 shadow">
+        <div class="card-body text-light text-center bg-dark">
+          <h3><b>Update Profile</b></h3>
+          <input class="tags w-75 my-4 py-1 bg-light text-dark" type="text" placeholder="Username"><br>
+          <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="text" placeholder="Full Name" disabled><br>
+          <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="email" placeholder="Email Address" disabled><br>
+          <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="number" placeholder="Contact No"><br>
+          <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="password" placeholder="Password"><br>
+          <a href="/home"><button class="btn btn-warning w-75 mb-4 py-2 shadow-sm">Save Details</button></a>
         </div>
+      </div>
     </div>
   </div>
+
+  <!-- <ion-grid>
+    <ion-row class="my-5">
+      <ion-col class="col-md-4">
+      </ion-col>
+      <ion-col class="text-center col-md-4">
+        <div class="card mx-4 shadow">
+          <div class="card-body text-light text-center bg-dark">
+            <h3><b>Update Profile</b></h3>
+            <input class="tags w-75 my-4 py-1 bg-light text-dark" type="text" placeholder="Username"><br>
+            <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="text" placeholder="Full Name" disabled><br>
+            <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="email" placeholder="Email Address" disabled><br>
+            <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="number" placeholder="Contact No"><br>
+            <input class="tags w-75 mb-4 py-1 bg-light text-dark" type="password" placeholder="Password"><br>
+            <a href="/home"><button class="btn btn-warning w-75 mb-4 py-2 shadow-sm">Save Details</button></a>
+          </div>
+        </div>
+      </ion-col>
+      <ion-col class="col-md-4">
+      </ion-col>
+    </ion-row>
+  </ion-grid> -->
+
   <div class="fixed">
     <app-footer></app-footer>
   </div>
