--- a/src/app/elec/elec.page.html
+++ b/src/app/elec/elec.page.html
@@ -5,29 +5,104 @@
     <h1 class="text-center">Electronics & Appliances</h1>
     <img src="assets\elf.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 270%;">
   </div>
-  <!-- <ion-row>
-    <ion-col class="col-md-4" *ngFor="let card of courselist.slice(0,8)">
-      <ion-card>
-        <img [src]="card.imageSource" style="width: 100%;" alt="online shopping display image">
-        <ion-card-header>
-          <ion-card-subtitle>
+
+  <!-- 2nd title -->
+  <div class="text-center">
+    <h2 style="color:  #f7ce3e;">A Catalogue Of Our Products</h2>
+  </div>
+
+  <!-- Catalog -->
+  <ion-row>
+    <ion-col class="col-md-3 " *ngFor="let card of getRandom()">
+      <ion-card class="">
+        <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+        <ion-card-header class="mt-auto mb-auto">
+          <ion-card-subtitle >
             {{card.title}}
+            <br>
+            <b>Color:</b> {{card.color}}
           </ion-card-subtitle>
-          <ion-card-title>
-            <b>Cost: {{card.cost}}</b>
+          <ion-card-title >
+            Type: {{card.type}} <br>
+            <b>Cost: ₹{{card.Cost}}/-</b>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
     </ion-col>
-  </ion-row> -->
-
-  <ion-row>
-    <ion-col class="text-center">
-      <ion-button>
-        View All
-      </ion-button>
-    </ion-col>
   </ion-row>
+  
+  <br>
+
+  <!-- 3rd title -->
+  <div class="text-center">
+    <h2 style="color:  #f7ce3e;">A Carousal Of Our Watches</h2>
+  </div>
+
+  <!-- Ionic Carousal -->
+  <ion-slides [options]="slideOptsOne" loop="true">
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of watchesCatalog.slice(0,3)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Type: {{card.type}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of watchesCatalog.slice(3,6)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Type: {{card.type}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of watchesCatalog.slice(6,9)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Type: {{card.type}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+  </ion-slides>
+ 
+  <br>
   
   <div class="fixed">
     <app-footer></app-footer>
