--- a/src/app/mens/mens.page.html
+++ b/src/app/mens/mens.page.html
@@ -1,27 +1,103 @@
 <app-header></app-header>
 
 <ion-content>
-      <div class="text-center m-3">
-        <h1 class="text-center">Men's Fashion</h1>
-        <img src="assets\mens.jpg" class="img-fluid" alt="online shopping display image" style="width: 70%; height: 45%;">
-      </div>
+  <div class="text-center m-3">
+    <h1 class="text-center">Men's Fashion</h1>
+    <img src="assets\mens.jpg" class="img-fluid" alt="online shopping display image" style="width: 70%; height: 45%;">
+  </div>
 
-  <!-- <ion-row>
-    <ion-col class="col-md-4">
-      <ion-card>
-        <img [src]="card.imageSource" style="width: 100%;" alt="online shopping display image">
-        <ion-card-header>
-          <ion-card-subtitle>
+  <!-- Catalog -->
+  <ion-row>
+    <ion-col class="col-md-3 " *ngFor="let card of getRandom()">
+      <ion-card class="">
+        <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+        <ion-card-header class="mt-auto mb-auto">
+          <ion-card-subtitle >
             {{card.title}}
+            <br>
+            <b>Color:</b> {{card.color}}
           </ion-card-subtitle>
-          <ion-card-title>
-            <b>Cost: {{card.cost}}</b>
+          <ion-card-title >
+            Size: {{card.size}} <br>
+            <b>Cost: ₹{{card.Cost}}/-</b>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
     </ion-col>
-  </ion-row> -->
+  </ion-row>
   
+  <br>
+
+  <div class="text-center">
+    <h2 style="color:  #f7ce3e;">A Carousal Of Our Mens Wear</h2>
+  </div>
+
+  <!-- Ionic Carousal -->
+  <ion-slides [options]="slideOptsOne" loop="true">
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of menCatalog.slice(0,3)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Size: {{card.size}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of menCatalog.slice(3,6)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Size: {{card.size}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="silde row">
+        <ion-col class="col d-flex align-items-stretch" *ngFor="let card of menCatalog.slice(6,9)">
+          <ion-card class="d-flex flex-column">
+            <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
+            <ion-card-header class="mt-auto mb-auto">
+              <ion-card-subtitle >
+                {{card.title}}
+                <br>
+                <b>Color:</b> {{card.color}}
+              </ion-card-subtitle>
+              <ion-card-title >
+                Size: {{card.size}} <br>
+                <b>Cost: ₹{{card.Cost}}/-</b>
+              </ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </ion-col>
+      </div>
+    </ion-slide>
+  </ion-slides>
+    
+  <br>
+
   <div class="fixed">
     <app-footer></app-footer>
   </div>
