added tagline, addtocart button, light mode toggle

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,48 +1,51 @@
 <div class="container-fluid text-dark" style="background-color: #f7ce3e;">
   <div class="card-body">   
-      <div class="row">
-          <div class="col-sm-4">
-              <h2 class="card-title font-weight-bold"><b>Shopping Planet</b></h2>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="col-sm-2 text-light">
-                  <a href="">
-                  <p class="text-body m-0">Home</p>
-                  </a>
-                  <a href="">
-                  <p class="text-body m-0"> Men </p>
-                  </a>
-                  <a href="" >
-                  <p class="text-body m-0"> Women </p>
-                  </a>
-                  <a href="">
-                  <p class="text-body m-0"> Watches </p>
-                  </a>
-                  <a href="">
-                      <p class="text-body m-0"> Jackets </p>
-                  </a>
-          </div>
-          <div class="col-sm-2 text-light">
-              <a href="">
-                  <p class="text-body m-0">Search</p>
-              </a>
-              <a href="">
-                  <p class="text-body m-0">Privacy Policy</p>
-              </a>
-              <a href="">
-                  <p class="text-body m-0">Tearms & conditions</p>
-              </a>
-              <a href="">
-                  <p class="text-body m-0">Returns & Refunds</p>
-              </a>
-          </div>
-          <div class="col-lg-4">
-              <p class="text-uppercase font-weight-bold m-0">Newsletter</p>
-                <form class="form-inline my-1 my-lg-4 shadow-sm">
-                    <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
-                    <button class="btn btn-dark my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
-                </form>  
-          </div>
-      </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <h2 class="card-title font-weight-bold"><b>Shopping Planet</b></h2>
+            <p class="card-text"><i>An all in one place for buying your Apparels, Electronics and Much more.<br>A planet Full of Products just for you!</i></p>
+        </div>
+        <div class="col-sm-2 text-light">
+            <a routerLink="/home">
+            <p class="text-body m-0">Home</p>
+            </a>
+            <a routerLink="/mens">
+            <p class="text-body m-0"> Men </p>
+            </a>
+            <a routerLink="/women">
+            <p class="text-body m-0"> Women </p>
+            </a>
+            <a routerLink="/elec">
+            <p class="text-body m-0"> Electronics </p>
+            </a>
+            <a routerLink="/jackets">
+                <p class="text-body m-0"> Jackets </p>
+            </a>
+            <a routerLink="/others">
+            <p class="text-body m-0"> Others </p>
+            </a>
+        </div>
+        <div class="col-sm-2 text-light">
+            <a href="">
+                <p class="text-body m-0">Search</p>
+            </a>
+            <a href="">
+                <p class="text-body m-0">Privacy Policy</p>
+            </a>
+            <a href="">
+                <p class="text-body m-0">Tearms & conditions</p>
+            </a>
+            <a href="">
+                <p class="text-body m-0">Returns & Refunds</p>
+            </a>
+        </div>
+        <div class="col-lg-4">
+            <p class="text-uppercase font-weight-bold m-0">Newsletter</p>
+            <form class="form-inline my-1 my-lg-4 shadow-sm">
+                <input class="form-control" style="width: 70%;" type="search" placeholder="Email" aria-label="Search">
+                <button class="btn btn-dark my-2 my-sm-0 rounded-0" style="width: 30%;" type="submit">Subscribe</button>
+            </form>  
+        </div>
+    </div>
   </div>
 </div>
