--- a/src/app/jackets/jackets.page.html
+++ b/src/app/jackets/jackets.page.html
@@ -7,10 +7,12 @@
     <img src="assets\jack 1.png" class="img-fluid" alt="online shopping display image" style="width: 80%;height: 10%;">
   </div>
 
+  <hr class="bg-light mx-5">
   <!-- 2nd title -->
   <div class="text-center">
     <h2 style="color:  #f7ce3e;">A Catalogue Of Our Products</h2>
   </div>
+  <hr class="bg-light mx-5">
 
   <!-- Catalog -->
   <ion-row>
@@ -26,6 +28,8 @@
           <ion-card-title >
             Size: {{card.size}} <br>
             <b>Cost: ₹{{card.Cost}}/-</b>
+            <br>
+            <button class="btn btn-warning float-right my-3">Add to Cart</button>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
