--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,7 +11,7 @@
           <input class="tags w-75 my-4 py-1 bg-light text-dark" name="email" [(ngModel)]="email" type="email" placeholder="Username or Email"><br>
           <input class="tags w-75 mb-4 py-1 bg-light text-dark" name="pass" [(ngModel)]="pass" type="password" placeholder="Password"><br>
             <button class="btn btn-warning w-75 mb-4 py-2 shadow-sm" (click)="login_fun()">Login</button>
-          <p>New to Shopping Planet? <span><a href="/signup">Create an Account</a></span></p>
+          <p>New to Shopping Planet? <span><a routerLink="/signup">Create an Account</a></span></p>
         </div>
       </div>
     </div>
