--- a/src/app/elec/elec.page.html
+++ b/src/app/elec/elec.page.html
@@ -6,10 +6,12 @@
     <img src="assets\elf.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 270%;">
   </div>
 
+  <hr class="bg-light mx-5">
   <!-- 2nd title -->
   <div class="text-center">
     <h2 style="color:  #f7ce3e;">A Catalogue Of Our Products</h2>
   </div>
+  <hr class="bg-light mx-5">
 
   <!-- Catalog -->
   <ion-row>
@@ -25,6 +27,8 @@
           <ion-card-title >
             Type: {{card.type}} <br>
             <b>Cost: ₹{{card.Cost}}/-</b>
+            <br>
+            <button class="btn btn-warning float-right my-3">Add to Cart</button>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
@@ -33,12 +37,14 @@
   
   <br>
 
+  <hr class="bg-light mx-5">
   <!-- 3rd title -->
   <div class="text-center">
     <h2 style="color:  #f7ce3e;">A Carousal Of Our Watches</h2>
   </div>
+  <hr class="bg-light mx-5">
 
-  <!-- Ionic Carousal -->
+  <!-- Ionic Carousal of watches-->
   <ion-slides [options]="slideOptsOne" loop="true">
     <ion-slide>
       <div class="silde row">
@@ -54,6 +60,8 @@
               <ion-card-title >
                 Type: {{card.type}} <br>
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
@@ -74,6 +82,8 @@
               <ion-card-title >
                 Type: {{card.type}} <br>
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
@@ -94,6 +104,8 @@
               <ion-card-title >
                 Type: {{card.type}} <br>
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
