--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,40 +8,29 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown size1">
-          <a class="nav-link dropdown-toggle active size1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active size1" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             All Categories
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/mens">Men</a>
-            <a class="dropdown-item" href="/women">Women</a>
-            <a class="dropdown-item" href="/elec">Electronics</a>
-            <a class="dropdown-item" href="/jackets">Jackets</a>
+          <div class="dropdown-menu dropdown-content bg-dark" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item text-light" routerLink="/mens">Men</a>
+            <a class="dropdown-item text-light" routerLink="/women">Women</a>
+            <a class="dropdown-item text-light" routerLink="/elec">Electronics</a>
+            <a class="dropdown-item text-light" routerLink="/jackets">Jackets</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/others">Others</a>
+            <a class="dropdown-item text-light" routerLink="/others">Others</a>
           </div>
         </li>
-        <!-- <li class="nav-item active right">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li> -->
-        <!-- <li class="nav-item active">
-            <a class="nav-link" routerLink="/profile">Profile</a>
-        </li> -->
-        <!-- <li class="nav-item active right">
-          <a class="nav-link" routerLink="/cart">My Cart</a>
-        </li> -->
-        <!-- <li class="nav-item active">
-
-          <a class="nav-link" routerLink="/order-history">My Order History</a>
-        </li> -->
-
       </ul>
-      
-      <div class="dropdown px-2 mt-auto">
+
+      <ion-label class="text-white">Light Mode</ion-label>
+      <ion-toggle (ionChange)="lighttheme($event)"></ion-toggle>
+
+      <div class="dropdown px-2 mt-auto" >
         <ion-icon name="person" class="px-2 dropbtn"></ion-icon>
         <div class="dropdown-content">
           <a class="nav-link" routerLink="/login">Login</a>
-          <a class="nav-link" routerLink="/profile">Profile</a>
-          <a class="nav-link" routerLink="/signup">SignUp</a>
+          <a class="nav-link" routerLink="/profile">Update Profile</a>
+          <a class="nav-link" routerLink="/order-history">My Order History</a>
           <a class="nav-link" routerLink="/cart">My Cart</a>
         </div>
       </div>
