--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,18 @@
 <app-header></app-header>
 
 <ion-content>
-  <img src="assets\shopping.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 65%;">
-  <!-- <ion-content class="text-center"> -->
-  <h2 class="text-center">Our Best Sellers</h2>
-  <p class="text-center"><i> ipsum dolor sit amet consectetur adipisicing elit. Saepe, dicta. Nostrum voluptatem ratione corporis modi! Nostrum sequi a consequatur delectus, cum quibusdam adipisci aut quia! Beatae iste excepturi vero numquam.</i></p>
+  <!-- <div class="text-center"> -->
+    <img src="assets\landing img.jpg" class="img-fluid px-5" alt="online shopping display image" style="width: 100%; height: 75%;">
+  <!-- </div> -->
+
+  <!-- <p class="text-center mt-3 p-0"><i>An all in one place for buying your Apparels, Electronics and Much more.<br>Aplanet Full of Products just for you!</i></p> -->
+  <p class="text-center mt-3 p-0"> Welcome to</p>
+  <h1 class="text-center mb-4"><b>Shopping Planet</b></h1>
+
+  <hr class="bg-light mx-5">
+  <h2 class="text-center text-warning">Our Best Sellers</h2>
+  <hr class="bg-light mx-5">
+  
   <ion-row>
     <ion-col class="col-md-4" *ngFor="let card of getRandom().slice(0,9)">
       <ion-card>
@@ -14,19 +22,24 @@
             {{card.title}}
           </ion-card-subtitle>
           <ion-card-title>
-            <b>Cost: {{card.Cost}}</b>
+            <b>Cost: ₹{{card.Cost}}</b> 
+            <button class="btn float-right my-3" onclick="cartfun(card.id)">Add to Cart</button>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
     </ion-col>
   </ion-row>
+
   <ion-row>
     <ion-col class="text-center">
-      <button class="btn" style="background-color: #f7ce3e;">
+      <button class="btn">
         View All
       </button>
     </ion-col>
   </ion-row>
+  
+  <br>
+
   <div class="fixed">
     <app-footer></app-footer>
   </div>
