--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -15,7 +15,7 @@
                 <input class="tags w-75 mb-4 py-1 bg-light text-dark" name="pass" [(ngModel)]="pass" type="password" placeholder="Password"><br>
                 <input class="tags w-75 mb-4 py-1 bg-light text-dark" name="repass" [(ngModel)]="repass" type="password" placeholder="Re-enter Password"><br>
                 <button class="btn btn-warning w-75 mb-4 py-2 shadow-sm" (click)="signup_fun()">Signup</button>
-                <p>Already Have an Account? <span><a href="/login">Login</a></span></p>
+                <p>Already Have an Account? <span><a routerLink="/login">Login</a></span></p>
             </div>
         </div>
     </div>
