--- a/src/app/women/women.page.html
+++ b/src/app/women/women.page.html
@@ -7,10 +7,12 @@
     <img src="assets\wmf.jpg" class="img-fluid" alt="online shopping display image" style="width: 100%; height: 100%;">
   </div>
   
+  <hr class="bg-light mx-5">
   <!-- 2nd title -->
   <div class="text-center">
     <h2 style="color:  #f7ce3e;">A Catalogue Of Our Products</h2>
   </div>
+  <hr class="bg-light mx-5">
 
   <!-- Catalog -->
   <ion-row>
@@ -25,6 +27,8 @@
           </ion-card-subtitle>
           <ion-card-title >
             <b>Cost: ₹{{card.Cost}}/-</b>
+            <br>
+            <button class="btn btn-warning float-right my-3">Add to Cart</button>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
@@ -33,10 +37,12 @@
   
   <br>
 
+  <hr class="bg-light mx-5">
   <!-- 3rd title -->
   <div class="text-center">
     <h2 style="color:  #f7ce3e;">A Carousal Of Our Womens' Wear</h2>
   </div>
+  <hr class="bg-light mx-5">
 
   <!-- Ionic Carousal -->
   <ion-slides [options]="slideOptsOne" loop="true">
@@ -53,6 +59,8 @@
               </ion-card-subtitle>
               <ion-card-title >
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
@@ -72,6 +80,8 @@
               </ion-card-subtitle>
               <ion-card-title >
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
@@ -92,6 +102,8 @@
               <ion-card-title >
                 <!-- Size: {{card.size}} <br> -->
                 <b>Cost: ₹{{card.Cost}}/-</b>
+                <br>
+                <button class="btn btn-warning my-3">Add to Cart</button>
               </ion-card-title>
             </ion-card-header>
           </ion-card>
