--- a/src/app/jackets/jackets.page.html
+++ b/src/app/jackets/jackets.page.html
@@ -16,7 +16,7 @@
 
   <!-- Catalog -->
   <ion-row>
-    <ion-col class="col-md-3 " *ngFor="let card of getRandom()">
+    <ion-col class="col-md-3 " *ngFor="let card of jacketsCatalog">
       <ion-card class="">
         <img [src]="card.imgsrc" style="width: 100%;" alt="online shopping display image">
         <ion-card-header class="mt-auto mb-auto">
@@ -29,7 +29,7 @@
             Size: {{card.size}} <br>
             <b>Cost: ₹{{card.Cost}}/-</b>
             <br>
-            <button class="btn btn-warning float-right my-3">Add to Cart</button>
+            <button class="btn btn-warning float-right my-3" (click)="cartfun(card.id)">Add to Cart</button>
           </ion-card-title>
         </ion-card-header>
       </ion-card>
