--- a/src/app/order-history/order-history.page.html
+++ b/src/app/order-history/order-history.page.html
@@ -1,42 +1,43 @@
 <app-header></app-header>
 
 <ion-content>
-  <ion-grid fixed="md">
+  <ion-grid>
+    <!-- page's title -->
     <div class="row pl-5 pt-2">
       <h1>
         Order History
       </h1>
     </div>
-    <div class="row" *ngFor="let i of [0,1,2,3,4]">
+    <!-- list of order history -->
+    <div class="row text-center">
+      <div class="mx-5 px-5 w-100" *ngFor="let item of userProducts">
         <ion-card>
           <ion-row>
-            <ion-col class="col-sm-2 m-0 p-0">
-              <img src="https://www.asa.edu/wp-content/themes/asa/img/holder.png" style="" class="img-fluid" alt="product" >
+            <ion-col class="col-sm-4">
+              <img [src]="item.imgsrc" class="img-fluid" alt="product" >
             </ion-col>
-            <ion-col class="col-sm-10">
+            <ion-col class="col-sm-8">
               <ion-row>    
-                <ion-col class="col-sm-8">
-                  <h4 class="card-title">Product Name</h4>
+                <ion-col class="col-sm-4">
+                  <h4 class="card-title">{{item.title}}</h4>
                   <ion-card-subtitle>
-                    Color: Red
+                    <b>Color:</b> {{item.color}}
                   </ion-card-subtitle>   
                 </ion-col>
-                <ion-col>
-                  <h5>Cost:</h5> 
+                <ion-col class="col-sm-4">
+                  <h5>Cost:₹{{item.Cost}}/-</h5>  
                   <ion-card-subtitle>
                     (Including all taxes)
                   </ion-card-subtitle>
                 </ion-col>
-              </ion-row>
-              <ion-row>
-                <h4 >Quantity: </h4>
-              </ion-row>
-              <ion-row>
-                <h5>Ordered on: </h5>
+                <ion-col class="col-sm-4">
+                  <h5>Quantity: {{item.quantity}}</h5>
+                </ion-col>
               </ion-row>
             </ion-col>
           </ion-row>
         </ion-card>
+      </div>
     </div>
   </ion-grid>
   
